[package]
name = "llhd-sim"
version = "0.3.1"
authors = ["Fabian Schuiki <fschuiki@iis.ee.ethz.ch>"]
edition = "2018"

description = "The reference simulator for Low Level Hardware Description assembly."
repository = "https://github.com/fabianschuiki/llhd-sim"
readme = "README.md"
license = "Apache-2.0 OR MIT"

[badges]
travis-ci = { repository = "fabianschuiki/llhd-sim", branch = "master" }

[dependencies]
llhd = "0.5"
clap = "2.24.2"
num = "0.1"
rayon = "0.7.1"
log = "0.4"
stderrlog = "0.4"
