[package]
name = "llhd-sim"
version = "0.4.0"
authors = ["Fabian Schuiki <fschuiki@iis.ee.ethz.ch>"]
edition = "2018"

description = "Deprecated reference simulator for Low Level Hardware Description assembly. Now part of the LLHD crate."
repository = "https://github.com/fabianschuiki/llhd-sim"
readme = "README.md"
license = "Apache-2.0 OR MIT"
maintenance = { status = "deprecated" }

[badges]
travis-ci = { repository = "fabianschuiki/llhd-sim", branch = "master" }

[dependencies]
llhd = "0.9"
clap = "2.24.2"
num = "0.2"
rayon = "1.2"
log = { version = "0.4", features = ["release_max_level_warn"] }
stderrlog = "0.4"
anyhow = "1"
